<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/light_gray"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:contentPadding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/commentUserImgCard"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/commentUserImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/cat" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/commentLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/commentUserImgCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/commentUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commentUsername"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/commentContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commentContent" />

            <TextView
                android:id="@+id/commentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commentTime" />

        </LinearLayout>

        <TextView
            android:id="@+id/commentLikesCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/comment_icons8_heart_24"
            android:text="@string/commentLikes"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>