<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <include layout="@layout/navbar"
        android:id="@+id/navbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/postUserConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navbar">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/postUserImgCard"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/postUserImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/anon" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/postUserLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/postUserImgCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/postUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postUserText"
                style="@style/postScreenSubtitle"/>

            <TextView
                android:id="@+id/postTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postTime" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:id="@+id/followButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Follow"
            android:textColor="@color/black"
            app:iconTint="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            app:icon="@drawable/ic_baseline_add_24"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/songPlayerConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:padding="16dp"
        android:background="@drawable/player_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postUserConstraintLayout">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/songImgCard"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/albumImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_not_found" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/songLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/songImgCard"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songTitle"
                style="@style/postScreenTitle"/>

            <TextView
                android:id="@+id/item_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songArtist" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/playButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            app:cornerRadius="24dp"
            app:icon="@drawable/ic_baseline_play_arrow_24"
            app:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/pauseButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:visibility="gone"
            app:cornerRadius="24dp"
            app:icon="@drawable/ic_baseline_pause_24"
            app:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>